fix: use proc builder